k8s/frontend/canary-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v1
  labels:
    app: frontend
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
      version: v1
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      imagePullSecrets:
        - name: ecr-secret

      containers:
        - name: frontend
          image: 349070092739.dkr.ecr.us-east-1.amazonaws.com/k8s-core-frontend:dfbecf4c644b5d0d0f2862c9c3d312d23bb600ff
          ports:
            - containerPort: 80

          volumeMounts:
            - name: logs
              mountPath: /var/log

          # 🔴 REQUIRED for NLB + IP target mode
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3

        - name: logging-sidecar
          image: busybox
          command:
            - sh
            - -c
            - |
              mkdir -p /var/log/nginx
              touch /var/log/nginx/error.log
              tail -F /var/log/nginx/error.log
          volumeMounts:
            - name: logs
              mountPath: /var/log

      volumes:
        - name: logs
          emptyDir: {}
