k8s/frontend/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport
  namespace: dev
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
